--- a/web/src/app/modules/main/modules/admin/admin-panel.component.html
+++ b/web/src/app/modules/main/modules/admin/admin-panel.component.html
@@ -26,6 +26,7 @@
             <input
                 formControlName="winner"
                 placeholder="Winner"
+                type="number"
                 class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             />
             <input
@@ -207,6 +208,61 @@
                 class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             >
                 Create match
+            </button>
+        </form>
+    </div>
+    <div class="column">
+        <h1>Users</h1>
+        <div
+            class="dark:bg-gray-200 mb-2"
+            *ngFor="let user of users$ | async; trackBy: trackUserByFn"
+        >
+            <p>
+                <strong>Username:</strong
+                ><span [textContent]="user.username"></span>
+            </p>
+            <p>
+                <strong>First name:</strong
+                ><span [textContent]="user.firstName"></span>
+            </p>
+            <p>
+                <strong>Last name:</strong
+                ><span [textContent]="user.lastName"></span>
+            </p>
+            <p>
+                <strong>Email:</strong><span [textContent]="user.email"></span>
+            </p>
+            <p><strong>ID:</strong><span [textContent]="user.id"></span></p>
+        </div>
+
+        <form (submit)="createUser()" [formGroup]="userForm">
+            <input
+                formControlName="username"
+                placeholder="Username"
+                class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            />
+            <input
+                formControlName="firstName"
+                placeholder="First name"
+                class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            />
+            <input
+                formControlName="lastName"
+                placeholder="Last name"
+                type="number"
+                class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            />
+            <input
+                formControlName="email"
+                placeholder="Email"
+                type="number"
+                class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            />
+            <button
+                type="submit"
+                class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            >
+                Create user
             </button>
         </form>
     </div>
