--- a/web/src/app/modules/main/modules/admin/admin-panel.component.scss
+++ b/web/src/app/modules/main/modules/admin/admin-panel.component.scss
@@ -1,8 +1,13 @@
 .container {
+    margin-top: 120px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .column {
     padding: 8px;
+}
+
+table {
+    width: 100%;
 }
