--- a/web/src/app/modules/main/modules/admin/admin-panel.component.scss
+++ b/web/src/app/modules/main/modules/admin/admin-panel.component.scss
@@ -1,11 +1,10 @@
 .container {
-    margin-top: 120px;
     display: flex;
     flex-direction: column;
 }
 
-.column {
-    padding: 8px;
+.table-container:not(:first-child) {
+    margin-top: 48px;
 }
 
 table {
