--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -42,6 +42,15 @@
                         >Admin</a
                     >
                 </li>
+                <li class="ml-6" *ngIf="(tournaments$ | async)?.length">
+                    <select (change)="changeTournamentContext($event)">
+                        <option
+                            *ngFor="let tournament of tournaments$ | async"
+                            [value]="tournament.tournamentCode"
+                            [textContent]="tournament.tournamentName"
+                        ></option>
+                    </select>
+                </li>
             </ul>
         </nav>
     </header>
