Initial API sync

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -30,7 +30,7 @@
                     <select (change)="changeTournamentContext($event)">
                         <option
                             *ngFor="let tournament of tournaments$ | async"
-                            [value]="tournament.tournamentCode"
+                            [value]="tournament.id"
                             [textContent]="tournament.tournamentName"
                         ></option>
                     </select>
