Add refresh mechanism to dashboard

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -28,6 +28,7 @@
                 </li>
                 <li class="ml-6" *ngIf="(tournaments$ | async)?.length">
                     <select (change)="changeTournamentContext($event)">
+                        <option [value]="null">None</option>
                         <option
                             *ngFor="let tournament of tournaments$ | async"
                             [value]="tournament.id"
